--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@mdi/font": "^6.5.95",
+    "bootstrap": "^5.1.3",
+    "sass": "^1.49.9",
     "vue": "^3.2.31"
   },
   "devDependencies": {
