--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "@mdi/font": "^6.5.95",
     "bootstrap": "^5.1.3",
+    "compare-versions": "^4.1.3",
+    "d3-scale-chromatic": "^3.0.0",
     "sass": "^1.49.9",
-    "vue": "^3.2.31"
+    "vue": "^3.2.31",
+    "vue-chart-3": "^3.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
