:construction_worker: Change addons.json update

--- a/.github/workflows/update-addon-data.yml
+++ b/.github/workflows/update-addon-data.yml
@@ -1,23 +1,35 @@
 name: Update addon statistics
 on:
   schedule:
-    - cron: 0 0 * * *
+    - cron: 0 1 * * *
 
 jobs:
   update-addon-statistics:
     runs-on: ubuntu-latest
     steps:
+      - name: ↩️Checkout
+        uses: actions/checkout@v3
+
+      - name: 🏗️ Install Node.js 16.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+          cache: 'npm'
+      - name: 🏗️ Install packages
+        run: npm ci
+      - name: ⚙️Build application
+        run: npm run build
+
       - name: ⏬ Download new addons.json
         uses: wei/wget@v1
         with:
-          args: -O addons.json https://analytics.home-assistant.io/addons.json
-      - name: 📁 Prepare folder structure
-        run: mkdir public && mv addons.json public/addons.json
+          args: -O /dist/addons.json https://analytics.home-assistant.io/addons.json
 
       - name: 🚀 Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
+        if: github.ref == 'refs/heads/main'
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: '.'
-          CLEAN: false
+          FOLDER: dist # The folder the action should deploy.
+          BASE_BRANCH: main
