--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,13 @@ updates:
     directory: "/"
     schedule:
       interval: "monthly"
+    groups:
+      action-dependencies:
+        dependency-type: "production"
   - package-ecosystem: npm
     directory: "/"
     schedule:
       interval: "monthly"
+    groups:
+      npm-dependencies:
+        dependency-type: "production"
