:wrench: More dependabot grouping

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,12 +6,14 @@ updates:
     schedule:
       interval: "monthly"
     groups:
-      action-dependencies:
+      GH actions:
         dependency-type: "production"
   - package-ecosystem: npm
     directory: "/"
     schedule:
       interval: "monthly"
     groups:
-      npm-dependencies:
+      npm:
         dependency-type: "production"
+      npm dev:
+        dependency-type: "development"
