--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,13 @@ jobs:
         run: npm run build
 
       - name: 🚀 Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        uses: JamesIves/github-pages-deploy-action@releases/v4
         if: github.ref == 'refs/heads/main'
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: dist # The folder the action should deploy.
-          BASE_BRANCH: main
+          token: ${{ secrets.GITHUB_TOKEN }}
+          folder: dist
+          single-commit: true
+          clean-exclude: 'addons.json'
 
       - name: 🗄️ List files
         run: |
