--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "d3-scale-chromatic": "^3.1.0",
     "sass": "^1.83.0",
     "vue": "^3.5.13",
-    "vue-chart-3": "^3.1.8"
+    "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
