--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "compare-versions": "^6.1.1",
     "d3-scale-chromatic": "^3.1.0",
+    "plausible-tracker": "^0.3.9",
     "sass": "^1.83.0",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2"
