--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "bootstrap": "^5.3.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "compare-versions": "^6.1.1",
     "d3-scale-chromatic": "^3.1.0",
+    "date-fns": "^4.1.0",
     "plausible-tracker": "^0.3.9",
     "sass": "^1.83.0",
     "vue": "^3.5.13",
